--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroungColor"
-    tools:context="com.ingesup.fabienlebon.antredeuxvins.MainActivity">
+    tools:context="com.ingesup.fabienlebon.antredeuxvins.RegisterActivity">
 
     <LinearLayout
         android:id="@+id/LayoutPresentation"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
+
         >
         <TextView
             android:layout_width="match_parent"
@@ -24,36 +24,45 @@
             android:textSize="42dp"
             android:textColor="@color/colorPrimary"
             />
-       <!--
-        <ImageView
-            android:id="@+id/imageView"
-            android:minHeight="250dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@mipmap/main_background_round" /> -->
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="50dp"
         android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:background="@drawable/linaerlayout_border">
+        android:layout_margin="40dp"
+        android:background="@drawable/linaerlayout_border"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        android:visibility="visible">
 
-        <!--  login Label -->
+        <!--  mail Label -->
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/login_TIL_Mailwrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:id="@+id/login_TIL_Mailwrapper"
-            >
+            android:layout_margin="15dp">
 
             <EditText
                 android:id="@+id/editTextMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/login_edittext_mail"
+                android:hint="@string/register_edittext_mail"
+                android:inputType="textEmailAddress" />
+        </android.support.design.widget.TextInputLayout>
+
+        <!-- Name Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/login_TIL_NameWrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp">
+
+            <EditText
+                android:id="@+id/editTextName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/register_edittext_name"
                 android:inputType="textEmailAddress" />
         </android.support.design.widget.TextInputLayout>
 
@@ -69,7 +78,23 @@
                 android:id="@+id/editTextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/login_edittext_password"
+                android:hint="@string/register_edittext_password"
+                android:inputType="textPassword" />
+        </android.support.design.widget.TextInputLayout>
+
+        <!--  Confirm password Label -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:id="@+id/editTextConfirmPasswordPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/register_edittext_confirmpassword"
                 android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
@@ -79,10 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:gravity="center"
-            android:text="@string/login_valid_form"
-            android:background="@color/colorPrimary"
-            
-            android:textColor="#FFF"
+            android:text="@string/register_valid_form"
             tools:ignore="OnClick" />
 
         <TextView
@@ -90,10 +112,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Vous n'avez pas de comptes ? Inscrivez-vous !"
-            android:onClick="registerOnclick"
-            />
+            android:onClick="registerToLoginOnclick"
+            android:text="Vous n'avez pas de comptes ? Inscrivez-vous !" />
 
     </LinearLayout>
-
 </RelativeLayout>
