--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title_app"
-            android:fontFamily="@font/lobster"
             android:textAlignment="center"
             android:textSize="42dp"
             android:textColor="@color/colorPrimary"
@@ -105,7 +104,9 @@
             android:layout_margin="15dp"
             android:gravity="center"
             android:text="@string/register_valid_form"
-            tools:ignore="OnClick" />
+            android:textColor="@color/backgroungColor"
+            android:background="@color/colorPrimary"
+            android:onClick="registerOnclick"/>
 
         <TextView
             android:id="@+id/textViewLink"
