--- a/app/src/main/res/layout/activity_cellar.xml
+++ b/app/src/main/res/layout/activity_cellar.xml
@@ -27,7 +27,7 @@
             android:id="@+id/cellar_search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10"
+            android:layout_margin="15dp"
             />
 
         <ListView
