Modification filter + add todo

--- a/app/src/main/res/layout/activity_cellar.xml
+++ b/app/src/main/res/layout/activity_cellar.xml
@@ -21,6 +21,8 @@
             android:textAlignment="center"
             android:textSize="26dp"
             android:textColor="@color/colorPrimary"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             />
 
         <EditText
