--- a/app/src/main/res/layout/cellar_single_layout.xml
+++ b/app/src/main/res/layout/cellar_single_layout.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/list_view_single_wine_name"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/list_view_single_wine_name"
         android:text="essai"
         android:textSize="18dp" />
 
