--- a/app/src/main/res/layout/dialog_addwine.xml
+++ b/app/src/main/res/layout/dialog_addwine.xml
@@ -64,16 +64,19 @@
         android:layout_gravity="center">
 
         <RadioButton
+            android:id="@+id/rouge1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/rouge"/>
 
         <RadioButton
+            android:id="@+id/blanc1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/blanc"/>
 
         <RadioButton
+            android:id="@+id/rose1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ros"/>
