--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,11 +15,14 @@
         android:orientation="vertical"
 
         >
-        <ImageView
-            android:id="@+id/imageView"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="77dp"
-            app:srcCompat="@drawable/antredeuxvins_logo" />
+            android:layout_height="wrap_content"
+            android:text="Inscription"
+            android:textAlignment="center"
+            android:textSize="42dp"
+            android:textColor="@color/colorPrimary"
+            />
     </LinearLayout>
 
     <LinearLayout
