--- a/app/src/main/res/layout/activity_cellar.xml
+++ b/app/src/main/res/layout/activity_cellar.xml
@@ -30,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
+            android:hint="Recherche"
             />
 
         <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
