--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroungColor"
-    tools:context="com.ingesup.fabienlebon.antredeuxvins.MainActivity">
+    tools:context="com.ingesup.fabienlebon.antredeuxvins.LoginActivity">
 
     <LinearLayout
         android:id="@+id/LayoutPresentation"
