add remove on swipe left on RecyclerView

--- a/app/src/main/res/layout/activity_cellar.xml
+++ b/app/src/main/res/layout/activity_cellar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cellar_layout_id"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -51,10 +52,10 @@
             android:id="@+id/swipe_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ListView
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/cellar_wineList"
                 android:layout_width="match_parent"
-                android:layout_height="478dp" />
+                android:layout_height="478dp"/>
         </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
