--- a/app/src/main/res/layout/cellar_single_layout.xml
+++ b/app/src/main/res/layout/cellar_single_layout.xml
@@ -1,40 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:id="@+id/list_view_single_wine_color"
-        android:layout_margin="10dp"
-        android:background="@drawable/ic_red_wine"
-        />
+    <RelativeLayout
+        android:id="@+id/viewBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_row_background">
 
-    <TextView
-        android:id="@+id/list_view_single_wine_name"
-        android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/delete_icon"
+            android:layout_width="@dimen/ic_delete"
+            android:layout_height="@dimen/ic_delete"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/padd_10"
+            android:src="@drawable/ic_trash" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/padd_10"
+            android:layout_toLeftOf="@id/delete_icon"
+            android:text="@string/delete"
+            android:textColor="#fff"
+            android:textSize="13dp" />
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/viewForeground"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/list_view_single_wine_color"
-        android:layout_marginStart="8dp"
-        android:layout_toEndOf="@+id/list_view_single_wine_color"
-        android:text="@string/res_list_view_single_name"
-        android:textSize="20dp" />
+        android:background="@android:color/white"
+        android:padding="@dimen/padd_10">
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/list_view_single_wine_color"
+                android:layout_margin="10dp"
+                android:background="@drawable/ic_red_wine"
+                />
 
-    <TextView
-        android:id="@+id/list_view_single_wine_food"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/list_view_single_wine_name"
-        android:layout_below="@+id/list_view_single_wine_name"
-        android:text="essai"
-        android:textSize="18dp" />
+            <TextView
+                android:id="@+id/list_view_single_wine_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/list_view_single_wine_color"
+                android:layout_marginStart="8dp"
+                android:layout_toEndOf="@+id/list_view_single_wine_color"
+                android:text="@string/res_list_view_single_name"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/list_view_single_wine_food"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/list_view_single_wine_name"
+                android:layout_below="@+id/list_view_single_wine_name"
+                android:text="essai"
+                android:textSize="18dp" />
+    </RelativeLayout>
 
 
 
 
 
-</RelativeLayout>
+</FrameLayout>
