--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="backgroungColor">#FFF</color>
     <color name="black">#000</color>
+    <color name="bg_row_background">#fa315b</color>
 </resources>
