--- a/app/src/main/res/layout/activity_wine.xml
+++ b/app/src/main/res/layout/activity_wine.xml
@@ -17,7 +17,7 @@
             android:id="@+id/editTextName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/nom_du_vin"
+            android:hint="@string/addwine_wine_name"
             android:inputType="text" />
     </android.support.design.widget.TextInputLayout>
 
@@ -31,7 +31,7 @@
             android:id="@+id/editTextMillesime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/millesime"
+            android:hint="@string/addwine_wine_millesime"
             android:inputType="date" />
     </android.support.design.widget.TextInputLayout>
 
@@ -46,46 +46,52 @@
             android:id="@+id/editTextvolume"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/volume"
+            android:hint="@string/addwine_wine_volume"
             android:inputType="numberDecimal" />
     </android.support.design.widget.TextInputLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/type"
+        android:text="@string/addwine_wine_type"
         android:layout_gravity="center"/>
 
-    <RadioGroup
-        android:id="@+id/activity_type_wine"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:layout_gravity="center">
-
-        <RadioButton
-            android:id="@+id/rouge1"
-            android:layout_width="wrap_content"
+        <RadioGroup
+            android:id="@+id/activity_type_wine"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/rouge"/>
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/blanc1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/blanc"/>
+            <RadioButton
+                android:id="@+id/rouge1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/addwine_wine_color_red"/>
 
-        <RadioButton
-            android:id="@+id/rose1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/ros"/>
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/blanc1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/addwine_wine_color_white"/>
+
+            <RadioButton
+                android:id="@+id/rose1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/addwine_wine_color_rose"/>
+        </RadioGroup>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/meilleur_avec"
+        android:text="@string/addwine_wine_advice"
         android:layout_gravity="center"/>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -98,20 +104,20 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/viande" />
+            android:text="@string/addwine_wine_food_meat" />
 
         <CheckBox
             android:id="@+id/activity_fromage_wine"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fromage" />
+            android:text="@string/addwine_wine_food_cheese" />
         <CheckBox
             android:id="@+id/activity_crustace_wine"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/crustace" />
+            android:text="@string/addwine_wine_food_crustacean" />
     </LinearLayout>
 
 
@@ -121,7 +127,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Modifier"
+            android:text="@string/wine_btn_update"
             android:visibility="visible"
             android:onClick="enableFieldsUpdateWine"/>
 
@@ -130,7 +136,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Accepter"
+            android:text="@string/wine_btn_accept"
             android:visibility="gone"
             android:onClick="updateWine"/>
 
@@ -139,7 +145,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Annuler"
+            android:text="@string/wine_btn_cancel"
             android:visibility="gone"
             android:onClick="cancelUpdateWine"/>
 
